--- a/DockerFile
+++ b/DockerFile
@@ -11,3 +11,8 @@ RUN npm install
 
 
 COPY . .
+
+EXPOSE 3000
+
+# Runtime command to be executed when the container is launched
+CMD ["node", "index.js"]
